--- a/SWP_Group6_FE/package.json
+++ b/SWP_Group6_FE/package.json
@@ -17,11 +17,14 @@
     "@mui/styled-engine-sc": "^6.4.3",
     "@tailwindcss/vite": "^4.0.6",
     "antd": "^5.24.0",
+    "axios": "^1.7.9",
     "formik": "^2.4.6",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "router": "^1.3.8",
     "router-dom": "^3.0.2",
     "sass": "^1.84.0",
