--- a/SWP_Group6_FE/package.json
+++ b/SWP_Group6_FE/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "formik": "^2.4.6",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^19.0.0",
