--- a/SWP_Group6_FE/package.json
+++ b/SWP_Group6_FE/package.json
@@ -12,21 +12,22 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.4",
-    "@mui/material": "^6.4.4",
+    "@mui/icons-material": "latest",
+    "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@mui/x-date-pickers": "^7.27.1",
     "@tailwindcss/vite": "^4.0.6",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "formik": "^2.4.6",
     "materialize-css": "^1.0.0-rc.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
-    "router": "^1.3.8",
+    "router": "^2.1.0",
     "router-dom": "^3.0.2",
     "sass": "^1.84.0",
     "styled-components": "^6.1.15",
@@ -35,9 +36,9 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.6",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "latest",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
@@ -45,7 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
-    "vite": "^6.1.0"
+    "tailwindcss": "^4.0.12",
+    "vite": "latest"
   }
 }
