--- a/SWP_Group6_FE/package.json
+++ b/SWP_Group6_FE/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "latest",
@@ -21,6 +22,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "formik": "^2.4.6",
+    "framer-motion": "^12.4.10",
     "materialize-css": "^1.0.0-rc.2",
     "react": "latest",
     "react-dom": "latest",
