--- a/SWP_Group6_FE/package.json
+++ b/SWP_Group6_FE/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.10.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "latest",
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.3",
@@ -22,7 +27,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "formik": "^2.4.6",
-    "framer-motion": "^12.4.10",
+    "framer-motion": "^12.5.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "latest",
     "react-dom": "latest",
