--- a/SWP_Group6_FE/package.json
+++ b/SWP_Group6_FE/package.json
@@ -12,23 +12,29 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.4",
-    "@mui/material": "^6.4.4",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
     "@mui/styled-engine-sc": "^6.4.3",
-    "@tailwindcss/vite": "^4.0.6",
-    "antd": "^5.24.0",
+    "@tailwindcss/vite": "^4.0.7",
+    "antd": "^5.24.2",
     "axios": "^1.7.9",
-    "cors": "^2.8.5",
     "formik": "^2.4.6",
-    "materialize-css": "^1.0.0-rc.2",
+    "install": "^0.13.0",
+    "materialize-css": "^1.0.0",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
     "router": "^1.3.8",
     "router-dom": "^3.0.2",
     "sass": "^1.84.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.15",
     "yup": "^1.6.1"
   },
@@ -45,7 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.7",
     "vite": "^6.1.0"
   }
 }
