--- a/SWP_Group6_FE/package.json
+++ b/SWP_Group6_FE/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -22,6 +23,7 @@
     "antd": "^5.24.2",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "framer-motion": "^12.5.0",
     "install": "^0.13.0",
     "materialize-css": "^1.0.0",
     "npm": "^11.2.0",
